--- a/rex_ios.html
+++ b/rex_ios.html
@@ -268,6 +268,7 @@
 </style>
 </head>
 <body>
+<span>1.0</span>
 <div id="parentId" class="parentDiv">
 	<div id="submitId" class="sectionDiv">
 		<div id="submitHeaderId" class="headerDiv">
