--- a/rex_ios.html
+++ b/rex_ios.html
@@ -151,29 +151,30 @@
 		font-weight: bold;
 	}
 }
+	body {
+		padding: 10px;
+	}
 
 	.parentDiv {
-		margin: 0;
+		margin: 0px;
+		padding: 10px;
 		text-align: center;
-		width: 100%;
 	}
 
 	.sectionDiv {
+		padding: 10px;
 		align: center;
 		text-align: center;
-		width: 100%;
 	}
 
 	.headerDiv {
 		text-align: left;
 		background: #eee;
-		margin-top: 10px;
 		padding-top: 5px;
 		padding-bottom: 5px;
 		font-family: -apple-system, Helvetica, sans-serif;
 		font-size: 10pt;
 		font-weight: bold;
-		width:100%;
 	}
 
 	.headerSpan {
@@ -182,37 +183,29 @@
 		
 
 	.contentDiv {
-		padding-top: 5px;
+		padding: 10px;
 		text-align: center;
-		width: 100%;
 	}
 
 	.labelDiv {
-		margin-left: 10px;
 		text-align: left;
 		font-family: -apple-system, Helvetica, sans-serif;
 		font-size: 11pt;
 	}
 
 	.textInputDiv {
-		text-align: left;
-		padding-left: 10px;
 		padding-right: 10px;
-		width: 95%;
+		text-align: left;
 	}
 
 	.numberInputDiv {
-		text-align: left;
-		padding-left: 10px;
 		padding-right: 10px;
-		width: 95%;
+		text-align: left;
 	}
 
 	.telInputDiv {
-		text-align: left;
-		padding-left: 10px;
 		padding-right: 10px;
-		width: 95%;
+		text-align: left;
 	}
 
 	.textInput {
@@ -268,7 +261,6 @@
 </style>
 </head>
 <body>
-<span>1.0</span>
 <div id="parentId" class="parentDiv">
 	<div id="submitId" class="sectionDiv">
 		<div id="submitHeaderId" class="headerDiv">
