--- a/rex_ios.html
+++ b/rex_ios.html
@@ -157,7 +157,6 @@
 
 	.parentDiv {
 		margin: 0px;
-		padding: 10px;
 		text-align: center;
 	}
 
@@ -183,7 +182,7 @@
 		
 
 	.contentDiv {
-		padding: 10px;
+		padding: 5px;
 		text-align: center;
 	}
 
@@ -194,17 +193,17 @@
 	}
 
 	.textInputDiv {
-		padding-right: 10px;
+		padding-right: 5px;
 		text-align: left;
 	}
 
 	.numberInputDiv {
-		padding-right: 10px;
+		padding-right: 5px;
 		text-align: left;
 	}
 
 	.telInputDiv {
-		padding-right: 10px;
+		padding-right: 5px;
 		text-align: left;
 	}
 
@@ -261,6 +260,7 @@
 </style>
 </head>
 <body>
+<span>2.0</span>
 <div id="parentId" class="parentDiv">
 	<div id="submitId" class="sectionDiv">
 		<div id="submitHeaderId" class="headerDiv">
