Fixed border box

--- a/rex_ios.html
+++ b/rex_ios.html
@@ -157,6 +157,7 @@
 
 	.parentDiv {
 		margin: 0px;
+		padding: 0px;
 		text-align: center;
 	}
 
@@ -182,7 +183,7 @@
 		
 
 	.contentDiv {
-		padding: 5px;
+		padding: 10px;
 		text-align: center;
 	}
 
@@ -193,7 +194,6 @@
 	}
 
 	.textInputDiv {
-		padding-right: 5px;
 		text-align: left;
 	}
 
@@ -208,18 +208,21 @@
 	}
 
 	.textInput {
+		box-sizing: border-box;
 		font-family: -apple-system, Helvetica, sans-serif;
 		font-size: 13pt;
 		width: 100%;
 	}
 
 	.numberInput {
+		box-sizing: border-box;
 		font-family: -apple-system, Helvetica, sans-serif;
 		font-size: 13pt;
 		width: 100%;
 	}
 
 	.telInput {
+		box-sizing: border-box;
 		font-family: -apple-system, Helvetica, sans-serif;
 		font-size: 13pt;
 		width: 100%;
