Fixed border box

--- a/rex_ios.html
+++ b/rex_ios.html
@@ -248,6 +248,14 @@
 		padding-bottom: 10px;
 	}
 
+	#submitId {
+		border-left: 2px solid blue;
+	}
+
+	#workAtId {
+		border-left: 2px solid red;
+	}
+
 	/* Chrome, Safari, Edge, Opera */
 	input::-webkit-outer-spin-button,
 	input::-webkit-inner-spin-button {
@@ -263,7 +271,7 @@
 </style>
 </head>
 <body>
-<span>2.0</span>
+<span>3.0</span>
 <div id="parentId" class="parentDiv">
 	<div id="submitId" class="sectionDiv">
 		<div id="submitHeaderId" class="headerDiv">
