Added section colors

--- a/rex_ios.html
+++ b/rex_ios.html
@@ -248,12 +248,20 @@
 		padding-bottom: 10px;
 	}
 
-	#submitId {
-		border-left: 2px solid blue;
+	#submitHeaderId {
+		border-left: 3px solid #aaf;
 	}
 
-	#workAtId {
-		border-left: 2px solid red;
+	#submitContentId {
+		border-left: 3px solid #aaf;
+	}
+
+	#workAtHeaderId {
+		border-left: 4px solid #faa;
+	}
+
+	#workAtContentId {
+		border-left: 4px solid #faa;
 	}
 
 	/* Chrome, Safari, Edge, Opera */
@@ -271,7 +279,6 @@
 </style>
 </head>
 <body>
-<span>3.0</span>
 <div id="parentId" class="parentDiv">
 	<div id="submitId" class="sectionDiv">
 		<div id="submitHeaderId" class="headerDiv">
