Added section colors

--- a/rex_ios.html
+++ b/rex_ios.html
@@ -249,19 +249,25 @@
 	}
 
 	#submitHeaderId {
-		border-left: 3px solid #aaf;
+		border-left: 2px solid #aaf;
+		border-right: 1px solid #aaa;
 	}
 
 	#submitContentId {
-		border-left: 3px solid #aaf;
+		border-left: 2px solid #aaf;
+		border-right: 1px solid #aaa;
+		border-bottom: 1px solid #aaa;
 	}
 
 	#workAtHeaderId {
-		border-left: 4px solid #faa;
+		border-left: 2px solid #faa;
+		border-right: 1px solid #aaa;
 	}
 
 	#workAtContentId {
-		border-left: 4px solid #faa;
+		border-left: 2px solid #faa;
+		border-right: 1px solid #aaa;
+		border-bottom: 1px solid #aaa;
 	}
 
 	/* Chrome, Safari, Edge, Opera */
