Added copy contact details

--- a/rex_ios.html
+++ b/rex_ios.html
@@ -344,7 +344,7 @@
 		</div>
 		<div id="loadFileContentId" class="contentDiv">
 			<div id="loadFileDeescriptionId" class="descriptionDiv">
-				To load a previously saved file press "Choose File" then press "Load".<br><br>
+				To load a previously saved file press "Choose File" to find file to load, then press "Load File" to populate fields.<br><br>
 			</div> 
 			<div id="loadFileButtonsId" class="descriptionDiv" style="display:flex;flex-direction:row;justify-content: space-around;">
 				<div style="display:flex;flex-direction:column;width:50%;padding:1px;">
@@ -413,6 +413,13 @@
 			<span class="headerSpan">Work To Be Performed At</span>
 		</div>
 		<div id="workAtContentId" class="contentDiv">
+			<div id="workAtCopyAddressLabelId" class="labelDiv">
+				<input id="workAtCopyAddressInput" type="checkbox" style="vertical-align:middle">
+				<label id="workAtCopyAddressLabel" for="workAtCopyAddressInput" style="vertical-algin:middle">
+					Use <b><i>Proposal Submitted To</i></b> Contact Details
+				</label>
+				<hr>
+			</div>
 			<div id="workAtNameLabelId" class="labelDiv">
 				Name
 			</div>
