--- a/rex_ios.html
+++ b/rex_ios.html
@@ -413,44 +413,68 @@
 				Type of Work
 			</div>
 			<div id="invoiceTypeOfWorkInputId" class="labelDiv">
-				<input id="invoiceTypeOfWorkSewerInput" type="checkbox" style="vertical-algin:middle">
+				<div style="display:flex;flex-direction:row;justify-content: space-around;">
+					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
 				<label id="invoiceTypeOfWorkSewerLabel" for="invoiceTypeOfWorkSewerInput" style="vertical-algin:middle">
-					Sewer
+				<input id="invoiceTypeOfWorkSewerInput" type="checkbox" style="vertical-algin:middle">
+					Sewer &amp; Drain
 				</label>
-				<input id="invoiceTypeOfWorkPlumbingInput" type="checkbox" style="vertical-align:middle">
+					</div>
+					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
 				<label id="invoiceTypeOfWorkPlumbingLabel" for="invoiceTypeOfWorkPlumbingInput" style="vertical-algin:middle">
+				<input id="invoiceTypeOfWorkPlumbingInput" type="checkbox" style="vertical-align:middle">
 					Plumbing
 				</label>
-				<input id="invoiceTypeOfWorkPumpingInput" type="checkbox" style="vertical-align:middle">
+					</div>
+					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
 				<label id="invoiceTypeOfWorkPumpingLabel" for="invoiceTypeOfWorkPumpingInput" style="vertical-algin:middle">
+				<input id="invoiceTypeOfWorkPumpingInput" type="checkbox" style="vertical-align:middle">
 					Pumping
 				</label>
-				<input id="invoiceTypeOfWorkIndustrialInput" type="checkbox" style="vertical-algin:middle">
+					</div>
+				</div>
+				<div style="display:flex;flex-direction:row;justify-content: space-around;">
+					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
 				<label id="invoiceTypeOfWorkIndustrialLabel" for="invoiceTypeOfWorkIndustrialInput" style="vertical-algin:middle">
+				<input id="invoiceTypeOfWorkIndustrialInput" type="checkbox" style="vertical-algin:middle">
 					Industrial
 				</label>
-				<input id="invoiceTypeOfWorkExcavationInput" type="checkbox" style="vertical-algin:middle">
+					</div>
+					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
 				<label id="invoiceTypeOfWorkExcavationLabel" for="invoiceTypeOfWorkExcavationInput" style="vertical-algin:middle">
+				<input id="invoiceTypeOfWorkExcavationInput" type="checkbox" style="vertical-algin:middle">
 					Excavation
 				</label>
-				<input id="invoiceTypeOfWorkDrainTileInput" type="checkbox" style="vertical-align:middle">
+					</div>
+					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
 				<label id="invoiceTypeOfWorkDrainTileLabel" for="invoiceTypeOfWorkDrainTileInput" style="vertical-algin:middle">
+				<input id="invoiceTypeOfWorkDrainTileInput" type="checkbox" style="vertical-align:middle">
 					Drain Tile
 				</label>
+					</div>
+				</div>
 			</div>
 			<div id="invoiceCustomerClassLabelId" class="labelDiv">
 				<hr>
 				Customer Class
 			</div>
 			<div id="invoiceCustomerClassInputId" class="labelDiv">
-				<input id="invoiceCustomerClassResidentialInput" type="checkbox" style="vertical-algin:middle">
+				<div style="display:flex;flex-direction:row;justify-content: space-around;">
+					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
 				<label id="invoiceCustomerClassResidentialLabel" for="invoiceCustomerClassResidentialInput" style="vertical-algin:middle">
+				<input id="invoiceCustomerClassResidentialInput" type="checkbox" style="vertical-algin:middle">
 					Residential
 				</label>
-				<input id="invoiceCustomerClassCommercialInput" type="checkbox" style="vertical-align:middle">
+					</div>
+					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
 				<label id="invoiceCustomerClassCommercialLabel" for="invoiceCustomerClassCommercialInput" style="vertical-algin:middle">
+				<input id="invoiceCustomerClassCommercialInput" type="checkbox" style="vertical-align:middle">
 					Commercial
 				</label>
+					</div>
+					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
