--- a/rex_ios.html
+++ b/rex_ios.html
@@ -428,19 +428,19 @@
 			<div id="invoiceTypeOfWorkInputId" class="labelDiv">
 				<div style="display:flex;flex-direction:row;justify-content: space-around;">
 					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
-						<label id="invoiceTypeOfWorkSewerLabel" for="invoiceTypeOfWorkSewerInput">
+						<label id="invoiceTypeOfWorkSewerLabel" for="invoiceTypeOfWorkSewerInput" style="color:#666;">
 							<input id="invoiceTypeOfWorkSewerInput" type="checkbox">
 							Sewer &amp; Drain
 						</label>
 					</div>
 					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
-						<label id="invoiceTypeOfWorkPlumbingLabel" for="invoiceTypeOfWorkPlumbingInput">
+						<label id="invoiceTypeOfWorkPlumbingLabel" for="invoiceTypeOfWorkPlumbingInput" style="color:#666;">
 							<input id="invoiceTypeOfWorkPlumbingInput" type="checkbox">
 							Plumbing
 						</label>
 					</div>
 					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
-						<label id="invoiceTypeOfWorkPumpingLabel" for="invoiceTypeOfWorkPumpingInput">
+						<label id="invoiceTypeOfWorkPumpingLabel" for="invoiceTypeOfWorkPumpingInput" style="color:#666;">
 							<input id="invoiceTypeOfWorkPumpingInput" type="checkbox">
 							Pumping
 						</label>
@@ -448,19 +448,19 @@
 				</div>
 				<div style="display:flex;flex-direction:row;justify-content: space-around;">
 					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
-						<label id="invoiceTypeOfWorkIndustrialLabel" for="invoiceTypeOfWorkIndustrialInput">
+						<label id="invoiceTypeOfWorkIndustrialLabel" for="invoiceTypeOfWorkIndustrialInput" style="color:#666;">
 							<input id="invoiceTypeOfWorkIndustrialInput" type="checkbox">
 							Industrial
 						</label>
 					</div>
 					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
-						<label id="invoiceTypeOfWorkExcavationLabel" for="invoiceTypeOfWorkExcavationInput">
+						<label id="invoiceTypeOfWorkExcavationLabel" for="invoiceTypeOfWorkExcavationInput" style="color:#666;">
 							<input id="invoiceTypeOfWorkExcavationInput" type="checkbox">
 							Excavation
 						</label>
 					</div>
 					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
-						<label id="invoiceTypeOfWorkDrainTileLabel" for="invoiceTypeOfWorkDrainTileInput">
+						<label id="invoiceTypeOfWorkDrainTileLabel" for="invoiceTypeOfWorkDrainTileInput" style="color:#666;">
 							<input id="invoiceTypeOfWorkDrainTileInput" type="checkbox">
 							Drain Tile
 						</label>
@@ -474,13 +474,13 @@
 			<div id="invoiceCustomerClassInputId" class="labelDiv">
 				<div style="display:flex;flex-direction:row;justify-content: space-around;">
 					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
-						<label id="invoiceCustomerClassResidentialLabel" for="invoiceCustomerClassResidentialInput">
+						<label id="invoiceCustomerClassResidentialLabel" for="invoiceCustomerClassResidentialInput" style="color:#666;">
 							<input id="invoiceCustomerClassResidentialInput" type="checkbox">
 							Residential
 						</label>
 					</div>
 					<div style="display:flex;flex-direction:column;width:33%;padding:1px;">
-						<label id="invoiceCustomerClassCommercialLabel" for="invoiceCustomerClassCommercialInput">
+						<label id="invoiceCustomerClassCommercialLabel" for="invoiceCustomerClassCommercialInput" style="color:#666;">
 							<input id="invoiceCustomerClassCommercialInput" type="checkbox">
 							Commercial
 						</label>
