--- a/rex_ios.html
+++ b/rex_ios.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width">
 <meta charset='UTF-8'>
+<link rel="apple-touch-icon" href="/apple_touch_icon.png"/>
 <style>
 @page 
 {
