--- a/rex_ios.html
+++ b/rex_ios.html
@@ -345,6 +345,15 @@
 		color: #fff;
 	}
 
+	.copyDiv {
+		font-family: -apple-system, Helvetica, sans-serif;
+		font-size: 10pt;
+		background: #00a;
+		color: #fff;
+		padding-top: 5px;
+		padding-bottom: 5px;
+	}
+
 </style>
 </head>
 <body>
@@ -599,8 +608,10 @@
 			</div>
 		</div>
 	</div>
-	<div>
-			  Copyright &copy; 2021 - MonB Development - All Rights Reserved
+	<div id="copySectionId" class="sectionDiv">
+		<div class="copyDiv">
+			Copyright &copy; 2021 - MonB Development - All Rights Reserved
+		</div>
 	</div>
 </div>
 </body>
