Added estimate valid field

--- a/rex_ios.html
+++ b/rex_ios.html
@@ -638,8 +638,10 @@
 						 The approximate starting date is
 					<input id="serviceDatesStartInput" type="date">
 					, and the approximate completion date is
-					<input id="serviceDatesCompleteInput" type="date">
-					.
+					<input id="serviceDatesCompleteInput" type="date">.<br>
+					The proposal may be withdrawn if not accepted within
+					<input id="serviceDatesEstimateValidInput" type="tel" style="text-align:right" size="3" maxlength="3">
+					days.
 			</div>
 		</div>
 	</div>
